<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      android:gravity="center_vertical|start"
      android:layout_height="?attr/actionBarSize"
      android:layout_width="match_parent"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
    <!--android:id="@+id/exercises"-->
    <!--app:showAsAction="withText|ifRoom"-->
    <!--android:title="@string/exercises"/>-->
    <item
        android:id="@+id/profile"
        app:showAsAction="withText|always"
        android:title="@string/profile"/>
    <item
        android:id="@+id/contact"
        app:showAsAction="withText|always"
        android:title="@string/contact"/>
    <item
        android:id="@+id/signout"
        android:icon="@drawable/logout"
        app:showAsAction="withText|always"
        android:title="@string/signout"/>
    <item
        android:id="@+id/settings"
        app:showAsAction="withText|ifRoom"
        android:title="@string/settings"/>

</menu>