<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GUI.Evaluations.EvaluationDetailActivity">

    <!--Date-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/txtVisitDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_date_mock"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!--Milestone-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milestones"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtMilestoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milestone_title_mock"
            android:textSize="22sp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <!--Purpose-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/headerPurpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purpose_header"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPurpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purpose_mock"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

    </LinearLayout>

    <!--Note-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/headerNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_header"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_mock"
            android:textAlignment="viewStart"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>